# verified-memory-gate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: research-brief.md
docs/adr/: 0001-write-gate-interceptor.md  0002-pluggable-verifier-registry.md  0003-edv-three-stage-pipeline.md  0004-governance-envelope.md  0005-gatemem-regression-harness.md  0006-langgraph-integration-hook.md  0007-local-daemon-audit-trail.md
examples/: edv_commit_demo.py
src/verified_memory_gate/: __init__.py  audit_log.py  builtin_verifiers.py  coordinator.py  daemon.py  edv.py  gate.py  gatemem_episodes.py  gatemem_harness.py  governance.py  langgraph_hook.py  models.py  store.py  verifiers.py
tests/: conftest.py  test_audit_log.py  test_builtin_verifiers.py  test_daemon.py  test_edv_pipeline.py  test_example_edv_commit_demo.py  test_gate.py  test_gate_verification.py  test_gatemem_harness.py  test_governance.py  test_langgraph_hook.py  test_store.py  test_verifiers.py
