[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verified-memory-gate"
version = "0.1.0"
description = "Intercept agent memory writes with EDV verification and GateMem-style governance before persistence."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Masoob Alam", email = "masoob0085@gmail.com" }]
keywords = ["agents", "memory", "governance", "verification", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "fastapi>=0.115", "httpx>=0.27"]
daemon = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]

[project.scripts]
vmg-audit-daemon = "verified_memory_gate.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/verified_memory_gate"]

[tool.hatch.build.targets.sdist]
include = ["src/verified_memory_gate", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["verified_memory_gate"]
